Expend tests for REST project